--- a/src/M4.WebApi/appsettings.json
+++ b/src/M4.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "M4Connection": ""
+ },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +10,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
