Adicionando serviço para envio de e-mail e cadastro de usuários

--- a/src/M4.WebApi/appsettings.Development.json
+++ b/src/M4.WebApi/appsettings.Development.json
@@ -1,9 +1,25 @@
 {
+  "ConnectionStrings": {
+    "M4Connection": ""
+  },
+  "EmailConfiguration": {
+    "From": "",
+    "SmtpServer": "",
+    "Port": 0,
+    "Username": "",
+    "Password": ""
+  },
+  "Urls": {
+    "ConfirmacaoEmail": "",
+    "CadastroNovaSenha": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
+
 }
