--- a/src/M4.WebApi/appsettings.json
+++ b/src/M4.WebApi/appsettings.json
@@ -1,7 +1,18 @@
 {
   "ConnectionStrings": {
     "M4Connection": ""
- },
+  },
+  "EmailConfiguration": {
+    "From": "",
+    "SmtpServer": "",
+    "Port": 0,
+    "Username": "",
+    "Password": ""
+  },
+  "Urls": {
+    "ConfirmacaoEmail": "",
+    "CadastroNovaSenha": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
