Adicionando JTW token para usuarios logados

--- a/src/M4.WebApi/appsettings.json
+++ b/src/M4.WebApi/appsettings.json
@@ -13,6 +13,12 @@
     "ConfirmacaoEmail": "",
     "CadastroNovaSenha": ""
   },
+  "AppSettings": {
+    "Secret": "",
+    "ExpirationTimeInHours": "",
+    "Issuer": "",
+    "Audience": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
