Adicionando serviço http para obter dados das ações

--- a/src/M4.WebApi/appsettings.json
+++ b/src/M4.WebApi/appsettings.json
@@ -13,6 +13,9 @@
     "ConfirmacaoEmail": "",
     "CadastroNovaSenha": ""
   },
+  "HttpClients": {
+    "Acoes": ""
+  },
   "AppSettings": {
     "Secret": "",
     "ExpirationTimeInHours": "",
