--- a/src/M4.WebApi/appsettings.Development.json
+++ b/src/M4.WebApi/appsettings.Development.json
@@ -13,6 +13,9 @@
     "ConfirmacaoEmail": "",
     "CadastroNovaSenha": ""
   },
+  "HttpClients": {
+    "Acoes": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
