--- a/src/M4.WebApi/appsettings.json
+++ b/src/M4.WebApi/appsettings.json
@@ -22,6 +22,26 @@
     "Issuer": "",
     "Audience": ""
   },
+  "HealthChecks-UI": {
+    "DisableMigrations": true,
+    "HealthChecks": [
+      {
+        "Name": "",
+        "Uri": ""
+      }
+    ],
+    "Webhooks": [
+      {
+        "Name": "",
+        "Uri": "",
+        "Payload": "",
+        "RestoredPayload": ""
+      }
+    ],
+    "EvaluationTimeOnSeconds": 0,
+    "MinimumSecondsBetweenFailureNotifications": 0,
+    "MaximumExecutionHistoriesPerEndpoint": 0
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
