--- a/src/M4.WebApi/appsettings.json
+++ b/src/M4.WebApi/appsettings.json
@@ -18,7 +18,7 @@
   },
   "AppSettings": {
     "Secret": "",
-    "ExpirationTimeInHours": "",
+    "ExpirationTimeInHours": 1,
     "Issuer": "",
     "Audience": ""
   },
