--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -22,3 +22,6 @@ jobs:
       
       - name: Build app 🚀
         run: dotnet build -c Release --no-restore
+
+      - name: Run unit tests 🧪
+        run: dotnet test -c Release --no-build
