--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+env:
+  DOTNET_VERSION: '5.0.x'
+  AZURE_WEBAPP_NAME: magicformula
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,7 +19,7 @@ jobs:
       - name: Setup .NET 5 🔧
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.x'
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Restore dependencies 🎡
         run: dotnet restore
@@ -25,3 +29,13 @@ jobs:
 
       - name: Run unit tests 🧪
         run: dotnet test -c Release --no-build
+
+      - name: Publish app 📰
+        run: dotnet publish -c Release -o ./out
+
+      - name: Deploy to Azure Web Apps 🚢
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_SECRET }}
+          package: ./out
