Alterando dependencias e ajustando script ci-cd

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,6 +21,9 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
+      - name: Cleaning dependencies 🧹
+        run: dotnet restore
+
       - name: Restore dependencies 🎡
         run: dotnet restore
       
