Adicionando teste de integração para end point obter-5-magic-formula

--- a/src/M4.WebApi/M4.WebApi.csproj
+++ b/src/M4.WebApi/M4.WebApi.csproj
@@ -25,4 +25,8 @@
   <ItemGroup>
     <ProjectReference Include="..\M4.Infrastructure\M4.Infrastructure.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Config\" />
+  </ItemGroup>
 </Project>
