Adicionando variaveis de ambiente para envio de e-mail

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -40,6 +40,11 @@ jobs:
         env:
           HttpClients__Acoes: ${{ secrets.HTTP_CLIENTS_ACOES }}
           ConnectionStrings__MagicFormulaSQLServer: Server=localhost;Database=CiCdDemo_Test;User=sa;Password=Pass~w0r8
+          EmailConfiguration__From: ${{ secrets.EMAIL_CONFIGURATION_FROM }}
+          EmailConfiguration__SmtpServer: ${{ secrets.EMAIL_CONFIGURATION_SMTP_SERVER }}
+          EmailConfiguration__Port: ${{ secrets.EMAIL_CONFIGURATION_PORT }}
+          EmailConfiguration__Username: ${{ secrets.EMAIL_CONFIGURATION_USERNAME }}
+          EmailConfiguration__Password: ${{ secrets.EMAIL_CONFIGURATION_PASSWORD }}
         run: dotnet test -c Release --no-build
 
       - name: Publish app 📰
