Adicionando gerador de dados Fake para testes de integração

--- a/tests/M4.WebApi.Tests/M4.WebApi.Tests.csproj
+++ b/tests/M4.WebApi.Tests/M4.WebApi.Tests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="33.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.18" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.18" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.18" />
