--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -6,7 +6,7 @@ on:
       - development
 
 env:
-  DOTNET_VERSION: '5.0.x'
+  DOTNET_VERSION: '5.0.302'
   AZURE_WEBAPP_NAME: magicformula-webapi
 
 jobs:
