--- a/src/M4.WebApi/M4.WebApi.csproj
+++ b/src/M4.WebApi/M4.WebApi.csproj
@@ -26,6 +26,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Config\" />
+    <ContentWithTargetPath Include="Extensions\Microsoft.Extensions.DependencyInjection.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <TargetPath>Microsoft.Extensions.DependencyInjection.dll</TargetPath>
+    </ContentWithTargetPath>
   </ItemGroup>
+  
+  <ItemGroup>
+    <ContentWithTargetPath Include="Extensions\Newtonsoft.Json.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <TargetPath>Newtonsoft.Json.dll</TargetPath>
+    </ContentWithTargetPath>
+  </ItemGroup>
+
 </Project>
