--- a/src/M4.Functions/EmailSender/EmailSender.csproj
+++ b/src/M4.Functions/EmailSender/EmailSender.csproj
@@ -6,6 +6,7 @@
     <UserSecretsId>f8494240-de86-4c88-88fa-f54aeeb92114</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.15.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.5.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.0.4" OutputItemType="Analyzer" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
